--- a/Project/app.yaml
+++ b/Project/app.yaml
@@ -5,20 +5,18 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
-# This sample incurs costs to run on the App Engine flexible environment. 
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/python/configuring-your-app-with-app-yaml
 manual_scaling:
   instances: 1
+
 resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
 
 env_variables:
-  CLOUD_SQL_CONNECTION_NAME: "cloud-computing-tema-3:europe-west1:db-instance"
-  DB_USER: "root"
-  DB_PASS: "57js6E804y8Gb4im"
-  DB_NAME: "DbCloudComputing"
-  DB_PUBLIC_IP: "34.77.204.44"
+  GOOGLE_APPLICATION_CREDENTIALS: 'cloudt1-d683fc3b7ebe.json'
+  CLOUD_SQL_CONNECTION_NAME: 'cloudt1:europe-west1:db-instance'
+  DB_USER: 'root'
+  DB_PASS: '57js6E804y8Gb4im'
+  DB_NAME: 'DbCloudComputing'
+  DB_PUBLIC_IP: '35.233.43.207'
